Adding doubly linked list to bucket and fixing test requirements

--- a/tox.ini
+++ b/tox.ini
@@ -5,7 +5,9 @@ skipsdist=True
 [testenv]
 commands =
     nosetests --with-coverage --cover-package=paa191t1 --cover-erase --cover-html
-deps = -rrequirements_test.txt
+deps =
+    -rrequirements_test.txt
+    -rrequirements.txt
 
 [testenv:lint]
 commands=
