Finished bit search with binary search

--- a/tox.ini
+++ b/tox.ini
@@ -4,7 +4,7 @@ skipsdist=True
 
 [testenv]
 commands =
-    nosetests --with-coverage --cover-package=paa191t1 --cover-erase --cover-html
+    nosetests -s --with-coverage --cover-package=paa191t1 --cover-erase --cover-html
 deps =
     -rrequirements_test.txt
     -rrequirements.txt
